* schedule printing excludes buttons & footer * hide invert button on small screens, unhide invite button * remove extraneous code from API sessions controller * new feature notice says how to hide sidebar * invitation spec fix

--- a/app/assets/stylesheets/schedules.scss
+++ b/app/assets/stylesheets/schedules.scss
@@ -206,4 +206,15 @@
   p#staff_item_locked {
     margin-top: 1em;
   }
+
+  /* Remove printing of URLs */
+  @media print {
+    a[href]:after {
+      content: none !important;
+    }
+    .no-print { display:none }
+  }
 }
+
+@import 'print';
+
